--- a/gb/18/9/7/n10696453.md
+++ b/gb/18/9/7/n10696453.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mbtku247/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mbtku247/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mbtku247/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mbtku247/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mbtku247/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mbtku247/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mbtku247/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>因双国籍身份 前绿党副领袖下周重返参议院</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年09月07日讯】（大纪元记者肖婕澳洲悉尼编译报导）因<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%8F%8C%E5%9B%BD%E7%B1%8D.md#1">双国籍</a>身份辞去绿党<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E5%91%98.md#1">参议员</a>职务的前绿党副领袖<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E6%B2%83%E7%89%B9%E6%96%AF.md#1">沃特斯</a>（Larissa Waters）将接替辞职的<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E8%8E%B1%E7%89%B9.md#1">巴特莱特</a>（Andrew Bartlett），重新成为绿党参议员，她将在下周重返联邦参议院。</p>
-<p>据澳新社消息，昆州议会6日（周四）证实，<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E6%B2%83%E7%89%B9%E6%96%AF.md#1">沃特斯</a>将填补<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E8%8E%B1%E7%89%B9.md#1">巴特莱特</a>留下的临时空缺，她将于下周一在堪培拉宣誓就职<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E5%91%98.md#1">参议员</a>。</p>
+<p>【大纪元2018年09月07日讯】（大纪元记者肖婕澳洲悉尼编译报导）因<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8C%E5%9B%BD%E7%B1%8D.md#1">双国籍</a>身份辞去绿党<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E5%91%98.md#1">参议员</a>职务的前绿党副领袖<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%83%E7%89%B9%E6%96%AF.md#1">沃特斯</a>（Larissa Waters）将接替辞职的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E8%8E%B1%E7%89%B9.md#1">巴特莱特</a>（Andrew Bartlett），重新成为绿党参议员，她将在下周重返联邦参议院。</p>
+<p>据澳新社消息，昆州议会6日（周四）证实，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%83%E7%89%B9%E6%96%AF.md#1">沃特斯</a>将填补<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%B4%E7%89%B9%E8%8E%B1%E7%89%B9.md#1">巴特莱特</a>留下的临时空缺，她将于下周一在堪培拉宣誓就职<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E5%91%98.md#1">参议员</a>。</p>
 <p>昆州州长帕勒谢（Annastacia Palaszczuk）在议会上说：“我相信沃特斯将再一次在联邦参议院成为昆士兰的支持者。”</p>
-<p>巴特莱特在上个月辞职，准备参加下届<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E5%A4%A7%E9%80%89.md#1">联邦大选</a>，竞选布里斯本选区的众议员席位，同时腾出位置以使沃特斯能够重新成为绿党参议员。</p>
-<p>在<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E5%8F%8C%E5%9B%BD%E7%B1%8D.md#1">双国籍</a>风波之前，沃特斯曾任联邦绿党副领袖。她因同时拥有加拿大国籍，被高等法庭裁决不具备议员资格。去年7月，沃特斯辞职，她的参议员职务被巴特莱特接任。</p>
+<p>巴特莱特在上个月辞职，准备参加下届<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E5%A4%A7%E9%80%89.md#1">联邦大选</a>，竞选布里斯本选区的众议员席位，同时腾出位置以使沃特斯能够重新成为绿党参议员。</p>
+<p>在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8C%E5%9B%BD%E7%B1%8D.md#1">双国籍</a>风波之前，沃特斯曾任联邦绿党副领袖。她因同时拥有加拿大国籍，被高等法庭裁决不具备议员资格。去年7月，沃特斯辞职，她的参议员职务被巴特莱特接任。</p>
 <p>今年4月，绿党的投票结果显示，沃特斯在党内获得了75%的支持票，这使她成为绿党参议员的主要候选人，也意味着她可能很快就可以拿回之前失去的参议员席位。</p>
-<p>当时巴特莱特没有表示他是否要等到<ahref="https://github.com/mbtku247/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E5%A4%A7%E9%80%89.md#1">联邦大选</a>开始之后再让位。</p>
+<p>当时巴特莱特没有表示他是否要等到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6%E5%A4%A7%E9%80%89.md#1">联邦大选</a>开始之后再让位。</p>
 <p>沃特斯曾说，一旦巴特莱特决定专注于他的竞选活动，她希望恢复原来的工作，并说自己已经等不及要回来了。</p>
 <p>责任编辑：尧宁</p>
 
@@ -19,42 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/16/7/5/n8067537.md#1">2016澳洲联邦大选带给澳洲人的是等待</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/16/7/6/n8071061.md#1">澳洲联邦大选：联盟党有望靠邮寄选票再组阁</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/16/7/8/n8078443.md#1">澳洲联邦大选 联盟党组阁在望</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/16/7/18/n8110794.md#1">2016联邦大选后 维州需关注五件事</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/16/10/11/n8387653.md#1">联邦大选未投票  18万西澳人面临罚款</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/17/12/6/n9929738.md#1">澳洲公开身份十余名议员陷双国籍危机</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/18/1/8/n10036509.md#1">议员兰姆仍持双国籍 澳政府吁工党迫其辞职</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/18/2/5/n10115879.md#1">工党议员兰姆涉双国籍风波 政府要求其辞职</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/18/2/6/n10118414.md#1">双国籍风波 工党向政府伸出橄榄枝</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/18/3/11/n10208809.md#1">政协委员提承认双重国籍 揭中共官员过客心态</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/5/n8067537.md#1">2016澳洲联邦大选带给澳洲人的是等待</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/6/n8071061.md#1">澳洲联邦大选：联盟党有望靠邮寄选票再组阁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/8/n8078443.md#1">澳洲联邦大选 联盟党组阁在望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/18/n8110794.md#1">2016联邦大选后 维州需关注五件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/11/n8387653.md#1">联邦大选未投票  18万西澳人面临罚款</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/6/n9929738.md#1">澳洲公开身份十余名议员陷双国籍危机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/1/8/n10036509.md#1">议员兰姆仍持双国籍 澳政府吁工党迫其辞职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/2/5/n10115879.md#1">工党议员兰姆涉双国籍风波 政府要求其辞职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/2/6/n10118414.md#1">双国籍风波 工党向政府伸出橄榄枝</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/11/n10208809.md#1">政协委员提承认双重国籍 揭中共官员过客心态</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/mbtku247/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11992609.md#1">武汉“裸官”蔡莉全家猛料被曝光</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11990026.md#1">公开喊“共产党下课”山东青年张文斌失联</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11990338.md#1">【翻墙必看】分析：中国粮食危机或真的来了</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11992077.md#1">转发疫情消息 北京68岁退休教授遭刑拘</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/30/n11987402.md#1">刘真今火化 胞弟送最后一程 辛龙未现身</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/30/n11987524.md#1">五毛窜改志村健死因 台立委：中共就是惹人厌</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/29/n11986601.md#1">传唐嫣产下龙凤胎 同剧女星回复两字证实</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/30/n11989488.md#1">确诊染疫两天 格莱美获奖者迪菲死于并发症</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/30/n11989376.md#1">娱乐场所开了又关 中国真实疫情引猜测</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/26/n11978138.md#1">宿命通功能超越时空 解读过去和未来</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/22/n11963367.md#1">忏悔要在活着的时候才有用</a></li>
-<li><a href="https://github.com/mbtku247/djy/blob/master/gb/20/3/12/n11935741.md#1">古代手术奇观：开颅术 胸腔术 换心术</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mbtku247/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mbtku247/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/7/n10696453.htm">因双国籍身份 前绿党副领袖下周重返参议院</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/9/7/n10696453.htm">因双国籍身份 前绿党副领袖下周重返参议院</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mbtku247/djy/blob/master/gb/18/9/7/n10696453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mbtku247/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mbtku247/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mbtku247/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mbtku247/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mbtku247/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/9/7/n10696453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
